# TransLibEval

./: .env.example  .gitignore  LICENSE  README.md  workflow_example.md
code/generate_strategies/Direct/: Deepseek-V3.py  change_class_name.py  codellama-7b.py  gpt-3.5-turbo.py  gpt-4o.py  llama3-70b.py  llama3-8b.py  qwen-max.py
code/generate_strategies/RA(method)/: codellama-7b.py  deepseek-v3.py  gpt-3.5-turbo.py  gpt-4o.py  llama3-70b.py  llama3-8b.py  qwen-max.py  replace.py
code/test_suites/cpp/do/: CMakeLists.txt
code/test_suites/java/: JSONTestRunner.java  MethodFinder.java
code/test_suites/normalization/: java.py
code/test_suites/python/: automate_test_cpp.py  copypy_cpp.py  copypy_java.py
data/cpp/src/: function_Pydantic_conint.cpp  function_asyncio_run.cpp  function_autopep8_fix_file.cpp  function_bitarray_extend.cpp  function_catboost_importance.cpp  function_collections_counter.cpp  function_collections_ordereddict.cpp  function_cvxpy_variable.cpp  function_dask_filter.cpp  function_funcy_flatten.cpp  function_funcy_merge.cpp  function_funcy_take.cpp  function_itertools_product.cpp  function_joblib_memory.cpp  function_jsonschema_descend.cpp  function_jsonschema_validate.cpp  function_levenshtein_hamming.cpp  function_missingno_heatmap.cpp  function_numpy_divide.cpp  function_numpy_sort.cpp  function_patsy_ModelDesc_from_formula.cpp  function_peewee_execute.cpp  function_peewee_executor.cpp  function_pycrypto_decrypt.cpp  function_pyphonetics_phonetics.cpp  function_request_post.cpp  function_shapely_union.cpp  (+7 more)
data/dependencies/: cpp_third_party.txt  requirements.txt
manual/: .gitignore
scripts/: translib_cli.py
translib/: __init__.py  env.py  providers.py  testing.py
(+2070 files in other folders)
